third_party/llvm-project/llvm/test/CodeGen/X86/pr50907.ll
; NOTE: Assertions have been autogenerated by utils/update_llc_test_checks.py
; RUN: not llc -o /dev/null %s 2>&1 | FileCheck %s
target triple = "x86_64-unknown-linux-gnu"

; CHECK: error: couldn't allocate input reg for constraint 'r'
define i32 @f2() #0 {
entry:
  %retval = alloca i32, align 4
  %d = alloca <8 x i16>, align 16
  %0 = load <8 x i16>, <8 x i16>* %d, align 16
  call void asm sideeffect "", "r,~{dirflag},~{fpsr},~{flags}"(<8 x i16> %0)
  %1 = load i32, i32* %retval, align 4
  ret i32 %1
}
